styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
    --text-stroke-color: #d3d3d3;
    --horizontal-scroll-speed: 50s;
    /* --main-background-color: #233e29; */
    --main-background-color: #2f4734;
    --secondary-color: #d3d3d3;
    --secondary-hover-color: #b2b2b3;
    --cat-hover-color: #f3f4f61a;
    --footer-copyright-color: #9ca3af;
}

html,
body {
    padding: 0;
    margin: 0;
    font-family: Garamond, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans,
        Droid Sans, Helvetica Neue, sans-serif;
    background: var(--main-background-color);
    color: var(--secondary-color);
    /* overflow-x: hidden;
    -ms-overflow-style: none; IE and Edge */
    scrollbar-width: none; /* Firefox */
}

body::-webkit-scrollbar {
    display: none; /* Chrome, Safari and Opera */
}

a {
    color: inherit;
    text-decoration: none;
}

* {
    box-sizing: border-box;
}

@responsive {
    .text-stroke-sm {
        -webkit-text-stroke: 0.5px var(--text-stroke-color);
    }

    .text-stroke-md {
        -webkit-text-stroke: 1px var(--text-stroke-color) !important;
    }

    .text-stroke-lg {
        -webkit-text-stroke: 3px var(--text-stroke-color);
    }
}

.link-underline {
    background-image: linear-gradient(transparent, transparent),
        linear-gradient(var(--secondary-color), var(--secondary-color));
    transition: background-size 0.1s ease-in-out;
    background-repeat: no-repeat;
    background-position: 0 90%;
    border-bottom-width: 0;
    background-size: 0 1px;
}

.link-underline:hover {
    background-size: 100% 1px;
    background-position: 0 90%;
}

.highlight-top-border:hover + div {
    border-top: 1px solid var(--secondary-hover-color);
}

@layer utilities {
    .text-stroke-hovered {
        --text-stroke-color: var(--secondary-hover-color);
    }
    /* .infinite-scroll-hovered {
        --horizontal-scroll-speed: 10s;
    } */
}

@layer base {
    html {
        @apply scroll-smooth;
    }
}

.infinite-scroll {
    animation: move var(--horizontal-scroll-speed) infinite linear;
}

@keyframes move {
    to {
        transform: translateX(-50%);
    }
}

